packages/@winglang/wingc/src/lsp/snapshots/completions/new_expression_partial_namespace.snap
---
source: libs/wingc/src/lsp/completions.rs
---
- label: cloud
  kind: 9
  documentation:
    kind: markdown
    value: "Module `cloud`"
  sortText: kk|cloud

