packages/@winglang/wingc/src/lsp/snapshots/completions/partial_reference_2.snap
---
source: libs/wingc/src/lsp/completions.rs
---
- label: bThing
  kind: 5
  detail: Inner
  sortText: ab|bThing

