packages/@winglang/wingc/src/lsp/snapshots/completions/partial_reference_3.snap
---
source: libs/wingc/src/lsp/completions.rs
---
- label: durationThing
  kind: 5
  detail: duration
  sortText: ab|durationThing

